# agent-swarm-poc

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PARKING_LOT.md  README.md  SITREP.md  docker-compose.yml  pyproject.toml
.claude/: ROADMAP.md
.claude/agents/: architect.md  code-reviewer.md  devops-specialist.md  github-specialist.md  project-manager.md  python-specialist.md
.claude/commands/: check.md  progress.md
.claude/rules/: agent-delegation.md  architecture.md  code-quality.md
.claude/skills/park/: SKILL.md
config/: sample-AGENTS.md  sample-repo-config.yaml
docs/: POC_PLAN.md  agent-swarm-architecture.md
led-matrix-simulator/: index.html  simulator.js
led-matrix-simulator/apps/: demo.js
src/agents/: __init__.py  base.py  planner.py  product_manager.py  worker.py
src/coordination/: __init__.py  file_locks.py
src/github_app/: __init__.py  client.py
src/orchestrator/: __init__.py  config.py  main.py  state_machine.py  task_router.py
tests/: __init__.py  test_product_manager.py  test_state_machine.py
